# iota-identity-lib

./: .gitignore  Cargo.toml
example/: Cargo.toml
example/src/: main.rs
src/: identity_manager.rs  iota.rs  lib.rs  main.rs
src/api/: account_state.rs  identity_manager.rs  identity_manager_builder.rs  mod.rs  utils.rs
