[package]
name = "iota_identity_lib"
version = "0.1.0"
authors = ["Lorenzo Limoli <lorenzo.limoli@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name= "iota_identity_lib"
path= "src/lib.rs"

[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "main", features = ["account"]}
tokio = { version = "1.4", features = ["full"]}
pretty_env_logger = { version = "0.4" }
rand = { version = "0.8" }
