[package]
name = "iota_identity_lib"
version = "0.1.0"
authors = ["Lorenzo Limoli <lorenzo.limoli@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name= "iota_identity_lib"
path= "src/lib.rs"

[workspace]
members = ["example",]

[dependencies]
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "main", features = ["account"]}
tokio = { version = "1.4", features = ["full"] }
anyhow = { version = "1.0", default-features = false }
