[package]
name = "iota_identity_lib"
version = "0.1.0"
authors = ["Lorenzo Limoli <lorenzo.limoli@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name= "iota_identity_lib"
path= "src/lib.rs"

[workspace]
members = ["example",]

[dependencies]
identity_iota = { version = "0.6" }
tokio = { version = "1.4", features = ["full"] }
anyhow = { version = "1.0", default-features = false }
regex = "^1"
serde = { version = "^1.0", features=["derive"] }
serde_json = "^1.0"
bincode = "1.3.2"
iota-crypto = { git = "https://github.com/iotaledger/crypto.rs", branch = "dev", features = ["blake2b"]}
chacha20poly1305 = "0.7.1"
aead = "0.4.0"
hex = "^0.4"
base64 = "0.13.0"
chrono = "0.4.19"
