[package]
name = "example"
version = "0.1.0"
authors = ["Lorenzo Limoli <lorenzo.limoli@outlook.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota_identity_lib = { path = ".." }
tokio = { version = "1.4", features = ["full"] }
identity = { git = "https://github.com/iotaledger/identity.rs", branch = "main", features = ["account"]}
